--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <style>
         html{background-color: aqua;}
     </style>
-    <body>
+    <img>
         <h1><u> ECONOMÍA </u></h1>
         <p><b><i> Esta asignatura es una de las más importante en la enseñanza secundaria, ya que nos enseña a como utilizar y administrar nuestro dinero entre otras muchas cosas</i></b></p>
         <p> Veremos los siguientes apartados:</p>
         <br>
+        <p> A continuación, veremos los datos de inflación de lo qjue llevamos de 2025. </p>
         <ol>
             <li> Inflación </li>
             <li> Préstamos </li>
-            <li> Balance de situación y cuenta de pérdidas y ganancias </li>
         </ol>
         <h2> INFLACIÓN </h2>
         <table> 
@@ -36,10 +36,16 @@
                 <td> Inflación </td>
              </tr>
              <tr>
-                <td> Marzo</td>
-                <td> -0,2%</td>
-                <td> NO inflación</td>
+                <td> Marzo </td>
+                <td> -0,2% </td>
+                <td> NO inflación </td>
              </tr>
         </table>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.focus-economics.com%2Fes%2Fblog%2Ftasas-inflacion-global%2F&psig=AOvVaw3qAkfNRaTiZZ8gg1jOmCUg&ust=1742892286875000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMi1ye6poowDFQAAAAAdAAAAABAJ"></img>
+        <p> Tras ver los datos de inflación, vamos a ver todo lo relacionado con los préstamos. </p>
+        <br>
+        <p><b> Préstamos a largo plazo</b> (más de un año). </p>
+        <p><b> Préstamos a corto plazo</b>(menos de un año). </p>
+
     </body>
 </html>
